[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/buildings/village/street/street_lights.png" type="Texture" id=1]
[ext_resource path="res://structures/props/light/AnimatedLight.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/ChangeOpacityArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://structures/props/village/StreetLight.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 42.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="StreetLight" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 5 )

[node name="Light2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -49 )
color = Color( 0.866667, 0.729412, 0.552941, 1 )
energy = 1.0
shadow_gradient_length = 3.0
shadow_filter = 1
shadow_filter_smooth = 8.2

[node name="StreetLights" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4

[node name="SignNE" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4
frame = 1

[node name="SignE" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4
frame = 2

[node name="SignNW" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4
frame = 1

[node name="SignW" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4
frame = 2

[node name="SignSE" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4
frame = 3

[node name="SignSW" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -23 )
vframes = 4
frame = 3

[node name="ChangeOpacityArea" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="ChangeOpacityArea" index="0"]
visible = false
position = Vector2( 0, -26 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( -1, -2 )
shape = SubResource( 2 )

[editable path="ChangeOpacityArea"]
